--- a/package.json
+++ b/package.json
@@ -43,11 +43,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@jimp/custom": "^0.9.3",
+    "@jimp/plugin-blit": "^0.9.3",
+    "@jimp/plugin-crop": "^0.9.3",
+    "@jimp/plugin-print": "^0.9.3",
     "@jimp/plugin-resize": "^0.9.3",
     "@jimp/types": "^0.9.3",
     "blueimp-load-image": "^2.26.0",
     "bulma": "^0.8.0",
     "common-tags": "^1.8.0",
+    "exif-parser": "^0.1.12",
     "form-data": "^3.0.0",
     "got": "^10.6.0",
     "lodash": "^4.17.15",
